--- a/templates/reveal.hbs
+++ b/templates/reveal.hbs
@@ -28,6 +28,6 @@
                 {{/if}}
             </div>
         </div>
-        <div class="reveal-widget-control"><div class="reveal-widget-icon icon"></div></div>
+        <a href="#" class="reveal-widget-control"><span class="reveal-widget-icon icon"></span></a>
     </div>
 </div>
