Fixes #2 - Allow html within body content Fixes #3 - Updated example.json link

--- a/templates/reveal.hbs
+++ b/templates/reveal.hbs
@@ -16,7 +16,7 @@
                 <img src="{{second.src}}" class="reveal-image" alt="{{second.alt}}" title="{{second.title}}"/>
                 {{/if}}
                 {{#if second.body}}
-                <div class="reveal-widget-item-text second"><span>{{second.body}}</span></div>
+                <div class="reveal-widget-item-text second"><span>{{{second.body}}}</span></div>
                 {{/if}}
             </div>
             <div class="reveal-widget-item">
@@ -24,7 +24,7 @@
                 <img src="{{first.src}}" class="reveal-image" alt="{{first.alt}}" title="{{first.title}}"/>
                 {{/if}}
                 {{#if first.body}}
-                <div class="reveal-widget-item-text first"><span>{{first.body}}</span></div>
+                <div class="reveal-widget-item-text first"><span>{{{first.body}}}</span></div>
                 {{/if}}
             </div>
         </div>
