--- a/templates/reveal.hbs
+++ b/templates/reveal.hbs
@@ -13,21 +13,83 @@
         <div class="reveal-widget-slider">
             <div class="reveal-widget-item">
                 {{#if second.src}}
-                <img src="{{second.src}}" class="reveal-image" alt="{{second.alt}}" title="{{second.title}}"/>
+                    <img src="{{second.src}}" class="reveal-image" alt="{{second.alt}}" title="{{second.title}}"/>
                 {{/if}}
                 {{#if second.body}}
-                <div class="reveal-widget-item-text second"><span>{{{second.body}}}</span></div>
+                    <div class="reveal-widget-item-text second">
+                        <span class="reveal-second-long {{#if _displaySecondShortText }}reveal-hidden{{/if}}">
+                            {{{second.body}}}
+                        </span>
+                        <span class="reveal-second-short {{#unless _displaySecondShortText }}reveal-hidden{{/unless}}">
+                            {{{_secondShortText}}}
+                            <a href="#" class="reveal-popup-open" tabindex="-1">
+                                <div class="reveal-link-text">
+                                    {{#if second.moreText}}
+                                        {{second.moreText}}
+                                    {{else}}
+                                        More
+                                    {{/if}}
+                                </div>
+                            </a>
+                        </span>
+                    </div>
                 {{/if}}
             </div>
             <div class="reveal-widget-item">
                 {{#if first.src}}
-                <img src="{{first.src}}" class="reveal-image" alt="{{first.alt}}" title="{{first.title}}"/>
+                    <img src="{{first.src}}" class="reveal-image" alt="{{first.alt}}" title="{{first.title}}"/>
                 {{/if}}
                 {{#if first.body}}
-                <div class="reveal-widget-item-text first"><span>{{{first.body}}}</span></div>
+                    <div class="reveal-widget-item-text first">
+                        <span class="reveal-first-long {{#if _displayFirstShortText }}reveal-hidden{{/if}}">
+                            {{{first.body}}}
+                        </span>
+                        <span class="reveal-first-short {{#unless _displayFirstShortText }}reveal-hidden{{/unless}}">
+                            {{{_firstShortText}}}
+                            <a href="#" class="reveal-popup-open" tabindex="-1">
+                                <div class="reveal-link-text">
+                                    {{#if first.moreText}}
+                                        {{first.moreText}}
+                                    {{else}}
+                                        More
+                                    {{/if}}
+                                </div>
+                            </a>
+                        </span>
+                    </div>
                 {{/if}}
             </div>
         </div>
         <a href="#" class="reveal-widget-control"><span class="reveal-widget-icon icon"></span></a>
+    </div>
+    <div class="reveal-popup reveal-hidden">
+        <div class="reveal-popup-inner">
+            <div class="reveal-popup-toolbar">
+                <div class="reveal-popup-toolbar-inner clearfix">
+                    <a href="#" class="reveal-popup-close">
+                        <div class="icon icon-cross"></div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="reveal-popup-content-inner">
+                {{#if first.body}}
+                <div class="reveal-popup-content">
+                    <div class="reveal-popup-content-inner">
+                        {{{first.body}}}
+                    </div>
+                </div>
+                {{/if}}
+
+                {{#if second.body}}
+                <div class="reveal-popup-content">
+                    <div class="reveal-popup-content-inner">
+                        {{{second.body}}}
+                    </div>
+                </div>
+                {{/if}}
+            </div>
+
+        </div>
     </div>
 </div>
