--- a/less/reveal.less
+++ b/less/reveal.less
@@ -86,10 +86,7 @@
 
 .reveal-widget-item-text span {
   background-color: rgba(0, 0, 0, 0.4);
-  border-color: rgba(255, 255, 255, 0);
-  border-image: none;
-  border-style: solid;
-  border-width: 1px;
+  border: none;
   color: #FFFFFF;
   display: block;
   margin: 0;
