Updates for v1.1.1 of the framework

--- a/less/reveal.less
+++ b/less/reveal.less
@@ -116,7 +116,7 @@
     z-index: 500;
     background-color: @inverted-background-color;
     color: @inverted-foreground-color;
-    border:@border;
+    border:@item-border;
 }
 
 .reveal-popup-inner {
