--- a/templates/reveal.hbs
+++ b/templates/reveal.hbs
@@ -1,7 +1,7 @@
 <div class="inner">
-    {{#if title}}
+    {{#if displayTitle}}
     <div class="title">
-        <h4>{{{title}}}</h4>
+        <h4>{{{displayTitle}}}</h4>
     </div>
     {{/if}}
     {{#if body}}
