--- a/less/reveal.less
+++ b/less/reveal.less
@@ -91,7 +91,7 @@
   display: block;
   margin: 0;
   max-height: 265px;
-  max-width: 390px;
+  max-width: 100%;
   padding: 10px;
   position: absolute;
   overflow: visible;
