Fixes #23, converted container from <span> to <div>
Also tidied up some of the styling.

--- a/less/reveal.less
+++ b/less/reveal.less
@@ -69,22 +69,22 @@
     }
 }
 
-.reveal-widget-item-text {
+div.reveal-widget-item-text {
     position: absolute;
     width: 90%;
 
    &.reveal-left {
-        left: 0;
+        left: 60px;
         top: 0;
     }
 
     &.reveal-right {
-        right: 0;
+        right: 60px;
         top: 0;
     } 
 }
 
-.reveal-widget-item-text span {
+div.reveal-widget-item-text-body {
   background-color: rgba(0, 0, 0, 0.4);
   border: none;
   color: #FFFFFF;
@@ -96,14 +96,6 @@
   position: absolute;
   overflow: visible;
   top: 20px;
-
-     &.reveal-left {
-        left: 60px;
-    }
-
-    &.reveal-right {
-        right: 60px;
-    }
 }
 
 .reveal-popup {
