--- a/templates/reveal.hbs
+++ b/templates/reveal.hbs
@@ -12,16 +12,10 @@
                             {{{second.body}}}
                         </div>
                         <div class="reveal-widget-item-text-body reveal-second-short {{#unless _displaySecondShortText }}reveal-hidden{{/unless}}">
-                            {{{_secondShortText}}}
-                            <a href="#" class="reveal-popup-open" tabindex="-1">
-                                <div class="reveal-link-text">
-                                    {{#if second.moreText}}
-                                        {{second.moreText}}
-                                    {{else}}
-                                        More
-                                    {{/if}}
-                                </div>
-                            </a>
+                            {{{_secondShortText}}}                            
+                              <div class="reveal-link-text">
+                                <a href="#" class="reveal-popup-open" tabindex="-1">{{#if second.moreText}}{{second.moreText}}{{else}}More{{/if}}</a>
+                              </div>
                         </div>
                     </div>
                 {{/if}}
@@ -37,50 +31,14 @@
                         </div>
                         <div class="reveal-widget-item-text-body reveal-first-short {{#unless _displayFirstShortText }}reveal-hidden{{/unless}}">
                             {{{_firstShortText}}}
-                            <a href="#" class="reveal-popup-open" tabindex="-1">
-                                <div class="reveal-link-text">
-                                    {{#if first.moreText}}
-                                        {{first.moreText}}
-                                    {{else}}
-                                        More
-                                    {{/if}}
-                                </div>
-                            </a>
+                            <div class="reveal-link-text">
+                              <a href="#" class="reveal-popup-open" tabindex="-1">{{#if first.moreText}}{{first.moreText}}{{else}}More{{/if}}</a>
+                            </div>
                         </div>
                     </div>
                 {{/if}}
             </div>
         </div>
         <a href="#" class="reveal-widget-control"><span class="reveal-widget-icon icon"></span></a>
-    </div>
-    <div class="reveal-popup reveal-hidden">
-        <div class="reveal-popup-inner">
-
-            <div class="reveal-popup-content-inner">
-                <div class="reveal-popup-content">
-                    <div class="reveal-popup-content-inner">
-                        {{#if first.body}}
-                            {{{first.body}}}
-                        {{/if}}
-                    </div>
-                </div>
-
-                <div class="reveal-popup-content">
-                    <div class="reveal-popup-content-inner">
-                        {{#if second.body}}
-                            {{{second.body}}}
-                        {{/if}}
-                    </div>
-                </div>
-            </div>
-
-            <div class="reveal-popup-toolbar">
-                <div class="reveal-popup-toolbar-inner clearfix">
-                    <a href="#" class="reveal-popup-close">
-                        <div class="icon icon-cross"></div>
-                    </a>
-                </div>
-            </div>
-        </div>
     </div>
 </div>
