--- a/less/reveal.less
+++ b/less/reveal.less
@@ -1,6 +1,6 @@
 .reveal-component {
     .reveal-widget {
-        position: relative;       
+        position: relative;
     }
 
     .reveal-widget-icon {
@@ -71,7 +71,8 @@
 
 div.reveal-widget-item-text {
     position: absolute;
-    width: 90%;
+    width: 100% !important;
+    height: 100%;
 
    &.reveal-left {
         left: 60px;
@@ -81,21 +82,33 @@ div.reveal-widget-item-text {
     &.reveal-right {
         right: 60px;
         top: 0;
-    } 
+    }
 }
 
 div.reveal-widget-item-text-body {
   background-color: rgba(0, 0, 0, 0.4);
   border: none;
+  box-sizing: border-box;
   color: #FFFFFF;
   display: block;
+  height: 100%;
   margin: 0;
-  max-height: 265px;
+  max-height: 100%;
   max-width: 100%;
-  padding: 10px;
+  padding: 30px;
   position: absolute;
   overflow: visible;
-  top: 20px;
+  top: 0;
+
+  p { margin: 0; }
+
+  &.reveal-left {
+    padding-left: 60px;
+  }
+
+  &.reveal-left {
+    padding-right: 60px;
+  }
 }
 
 .reveal-popup {
