fixing left property

--- a/less/reveal.less
+++ b/less/reveal.less
@@ -75,12 +75,12 @@ div.reveal-widget-item-text {
     height: 100%;
 
    &.reveal-left {
-        left: 60px;
+        left: 0;
         top: 0;
     }
 
     &.reveal-right {
-        right: 60px;
+        right: 0;
         top: 0;
     }
 }
