changing arrow from span to div

--- a/templates/reveal.hbs
+++ b/templates/reveal.hbs
@@ -39,6 +39,6 @@
                 {{/if}}
             </div>
         </div>
-        <a href="#" class="reveal-widget-control"><span class="reveal-widget-icon icon"></span></a>
+        <a href="#" class="reveal-widget-control"><div class="reveal-widget-icon icon"></div></a>
     </div>
 </div>
