Added overflow-y: auto styling to text overlays
This will allow scrolling large blocks of text.

--- a/less/reveal.less
+++ b/less/reveal.less
@@ -99,7 +99,7 @@ div.reveal-widget-item-text-body {
   max-width: 100%;
   padding: 30px;
   position: absolute;
-  overflow: visible;
+  overflow-y: auto;
   top: 0;
   width: 100%;
 
