--- a/less/reveal.less
+++ b/less/reveal.less
@@ -49,7 +49,7 @@
 
 .reveal-widget-control {
     background-color: darken(@item-color, 15%);
-    background-color: fade(darken(@item-color, 15%), 70%) !important;
+    background-color: fade(darken(@item-color, 15%), 70%);
     height: 100%;
     position: absolute;
     top: 0;
@@ -66,7 +66,7 @@
 
     &:hover {
         background-color: darken(@item-color, 15%);
-        background-color: fade(darken(@item-color, 15%), 90%) !important;
+        background-color: fade(darken(@item-color, 15%), 90%);
         cursor: pointer;
     }
 }
