--- a/less/reveal.less
+++ b/less/reveal.less
@@ -15,15 +15,16 @@
 
     .reveal-widget-item {
         position: relative;
-        width: 50%;
     }
 
     .reveal-widget-item.reveal-left {
         float: left;
+        width: 50%;
     }
 
     .reveal-widget-item.reveal-right {
         float: right;
+        width: 50%;
     }
 
     .reveal-image {
@@ -52,16 +53,30 @@
     background-color: fade(darken(@item-color, 15%), 70%);
     height: 100%;
     position: absolute;
-    top: 0;
     width: 50px;
     z-index: 5;
 
     &.reveal-left {
         left: 0;
+        top: 0;
     }
 
     &.reveal-right {
         right: 0;
+        top: 0;
+    }
+
+    &.reveal-top {
+        height: 50px;
+        width: 100%;
+        top: 0;
+    }
+
+    &.reveal-bottom {
+        height: 50px;
+        width: 100%;
+        top: auto;
+        bottom: 0;
     }
 
     &:hover {
@@ -100,17 +115,34 @@ div.reveal-widget-item-text-body {
   padding: 30px;
   position: absolute;
   overflow-y: auto;
-  top: 0;
   width: 100%;
 
   p { margin: 0; }
 
   &.reveal-left {
     padding-left: 70px;
+    top: 0;
   }
 
   &.reveal-left {
     padding-right: 70px;
+    top: 0;
+  }
+
+  &.reveal-top {
+    z-index: 1;
+    position: absolute;
+    top: -100% !important;
+    bottom: 0;
+
+    p { margin-top: 40px; }
+  }
+
+  &.reveal-bottom {
+    z-index: 1;
+    position: absolute;
+    top: -100% !important;
+    bottom: auto;
   }
 }
 
