--- a/less/reveal.less
+++ b/less/reveal.less
@@ -11,6 +11,14 @@
         top: 50%;
         vertical-align: middle;
         width: 100%;
+
+        &.icon-controls-up {
+            top: 25%;
+        }
+
+        &.icon-controls-down {
+            top: 25%;
+        }
     }
 
     .reveal-widget-item {
