--- a/less/reveal.less
+++ b/less/reveal.less
@@ -122,7 +122,6 @@ div.reveal-widget-item-text-body {
   margin: 0;
   max-height: 100%;
   max-width: 100%;
-  padding: 30px;
   position: absolute;
   overflow-y: auto;
   width: 100%;
@@ -130,12 +129,12 @@ div.reveal-widget-item-text-body {
   p { margin: 0; }
 
   &.reveal-left {
-    padding-left: 70px;
+    padding: 30px 30px 30px 70px !important;
     top: 0;
   }
 
-  &.reveal-left {
-    padding-right: 70px;
+  &.reveal-right {
+    padding: 30px 70px 30px 30px !important;
     top: 0;
   }
 
@@ -143,6 +142,7 @@ div.reveal-widget-item-text-body {
     z-index: 1;
     position: absolute;
     bottom: 0;
+    padding: 70px 30px 30px 30px !important;
 
     p { margin-top: 40px; }
   }
@@ -151,6 +151,7 @@ div.reveal-widget-item-text-body {
     z-index: 1;
     position: absolute;
     bottom: auto;
+    padding: 30px 30px 70px 30px !important;
   }
 }
 
