--- a/templates/reveal.hbs
+++ b/templates/reveal.hbs
@@ -2,7 +2,7 @@
     {{> component this}}
     <div class="reveal-widget reveal-component component-widget">
         <div class="reveal-widget-slider" tabindex="1">
-            <a href="#" class="reveal-widget-control" aria-label="{{toggleLabel.title}}"><div class="reveal-widget-icon icon"></div></a>
+            <a href="#" class="reveal-widget-control" aria-label="{{_globals._components._reveal.ariaLabel}}"><div class="reveal-widget-icon icon"></div></a>
             <div class="reveal-widget-item">
                 {{#if second.src}}
                     <img src="{{second.src}}" class="reveal-image" alt="{{second.alt}}" title="{{second.title}}"/>
