ADAPT-1642, bottom reveal reveal order flip fix.

--- a/templates/reveal.hbs
+++ b/templates/reveal.hbs
@@ -3,7 +3,7 @@
     <div class="reveal-widget reveal-component component-widget">
         <div class="reveal-widget-slider" tabindex="1">
             <a href="#" class="reveal-widget-control" aria-label="{{_globals._components._reveal.ariaLabel}}"><div class="reveal-widget-icon icon"></div></a>
-            <div class="reveal-widget-item">
+            <div class="reveal-widget-item second-item">
                 {{#if second.src}}
                     <img src="{{second.src}}" class="reveal-image" alt="{{second.alt}}" title="{{second.title}}"/>
                 {{/if}}
@@ -18,7 +18,7 @@
                     </div>
                 {{/if}}
             </div>
-            <div class="reveal-widget-item" tabindex="2">
+            <div class="reveal-widget-item first-item" tabindex="2">
                 {{#if first.src}}
                     <img src="{{first.src}}" class="reveal-image" alt="{{first.alt}}" title="{{first.title}}"/>
                 {{/if}}
