ADAPT-1579, more button change to set pixel position.

--- a/less/reveal.less
+++ b/less/reveal.less
@@ -212,49 +212,17 @@ div.reveal-widget-item-text-body {
     display: block;
     position: absolute;
     right: 12%;
+    bottom: 3%;
     z-index: 9;
 
-    .reveal-left & {
-        bottom: 3%;
+    .reveal-bottom & {
+        bottom: 51px;
     }
 
-    .reveal-top & {
-        bottom: 3%;
+    .reveal-right & {
+        right: 51px;
     }
 }
-
-
-.size-small  {
-    .reveal-right .reveal-link-text {
-        bottom: 3%;
-        right: 20%;
-    }
-
-    .reveal-bottom .reveal-link-text {
-        bottom: 25%;
-    }
-}
-
-.size-medium {
-    .reveal-right .reveal-link-text {
-        bottom: 3%;
-        right: 16%;
-    }
-    .reveal-bottom .reveal-link-text {
-        bottom: 16%;
-    }
-}
-
-.size-large  {
-    .reveal-right .reveal-link-text {
-        bottom: 3%;
-        right: 13%;
-    }
-    .reveal-bottom .reveal-link-text {
-        bottom: 12%;
-    }
-}
-
 
 .reveal-hidden {
     display:none !important;
