Re-work to correct issues with IE and overlay of 'More' button
When calling for multiple elements it's better to use the class names.

Also made use of the 'after' property to append the 'More' button.

--- a/less/reveal.less
+++ b/less/reveal.less
@@ -127,6 +127,12 @@ div.reveal-widget-item-text-body {
   width: 100%;
   z-index: -1;
 
+  &:not(.is-truncated) {
+      .reveal-popup-open {
+          display: none;
+      }
+  }
+
   &.reveal-left {
     top: 0;
     padding: 40px 40px 60px 90px;
