--- a/templates/reveal.hbs
+++ b/templates/reveal.hbs
@@ -9,11 +9,9 @@
                 {{/if}}
                 {{#if second.body}}
                     <div class="reveal-widget-item-text second">
-                        <div class="reveal-widget-item-text-body reveal-second-long" class="a11y-ignore" aria-hidden="true" tab-index="-1">
-                            {{{a11y_text second.body}}}                          
-                        </div>
-                        <div class="reveal-link-text reveal-hidden">
-                            <a href="#" class="reveal-popup-open" tabindex="-1">{{#if second.moreText}}{{second.moreText}}{{else}}More{{/if}}</a>
+                        <div class="reveal-widget-item-text-body reveal-second-long dot-ellipsis dot-resize-update" class="a11y-ignore" aria-hidden="true" tab-index="-1">
+                            {{{a11y_text second.body}}}
+                            <a href="#" class="reveal-popup-open" tabindex="-1">{{#if second.moreText}}{{second.moreText}}{{else}}More{{/if}}</a>                          
                         </div>
                     </div>
                 {{/if}}
@@ -24,11 +22,9 @@
                 {{/if}}
                 {{#if first.body}}
                     <div class="reveal-widget-item-text first">
-                        <div class="reveal-widget-item-text-body reveal-first-long">
+                        <div class="reveal-widget-item-text-body reveal-first-long dot-ellipsis dot-resize-update">
                             {{{a11y_text first.body}}}
-                        </div>
-                        <div class="reveal-link-text reveal-hidden">
-                            <a href="#" class="reveal-popup-open" tabindex="-1">{{#if first.moreText}}{{first.moreText}}{{else}}More{{/if}}</a>
+                             <a href="#" class="reveal-popup-open" tabindex="-1">{{#if first.moreText}}{{first.moreText}}{{else}}More{{/if}}</a>                          
                         </div>
                     </div>
                 {{/if}}
